force-app/main/default/objects/Fleet_Trace__b/fields/Model_Version__c.field-meta.xml
<CustomField>
    <fullName>Model_Version__c</fullName>
    <description>Foundation model version that produced the response.</description>
    <label>Model Version</label>
    <type>Text</type>
    <length>120</length>
</CustomField>