force-app/main/default/objects/Fleet_Trace__b/fields/Occurred_At__c.field-meta.xml
<CustomField>
    <fullName>Occurred_At__c</fullName>
    <description>Second index column: turn timestamp, read in descending order.</description>
    <label>Occurred At</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>