force-app/main/default/objects/Fleet_Trace__b/fields/Org_Agent_Key__c.field-meta.xml
<CustomField>
    <fullName>Org_Agent_Key__c</fullName>
    <description>First index column: the monitored agent API name. Equality-filtered on read.</description>
    <label>Org Agent Key</label>
    <type>Text</type>
    <length>60</length>
    <required>true</required>
</CustomField>