force-app/main/default/objects/Fleet_Trace__b/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>Captured agent response. Transcript field, gated by Fleet_View_Transcripts.</description>
    <label>Response</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>