force-app/main/default/objects/Fleet_Trace__b/fields/Run_Key__c.field-meta.xml
<CustomField>
    <fullName>Run_Key__c</fullName>
    <description>Calibration run key when this turn came from a run rather than production.</description>
    <label>Run Key</label>
    <type>Text</type>
    <length>60</length>
</CustomField>