force-app/main/default/objects/Fleet_Trace__b/fields/Topic_Selected__c.field-meta.xml
<CustomField>
    <fullName>Topic_Selected__c</fullName>
    <description>Topic the agent routed this turn to.</description>
    <label>Topic Selected</label>
    <type>Text</type>
    <length>255</length>
</CustomField>