force-app/main/default/objects/Fleet_Trace__b/fields/Topics_Considered__c.field-meta.xml
<CustomField>
    <fullName>Topics_Considered__c</fullName>
    <description>JSON array of candidate topics and their scores.</description>
    <label>Topics Considered</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>