force-app/main/default/objects/Fleet_Trace__b/fields/Trace_Key__c.field-meta.xml
<CustomField>
    <fullName>Trace_Key__c</fullName>
    <description>Third index column: uniqueness tiebreak for a turn. Sized 35 so the index text total (60 + 35 = 95) stays under the platform's Big Object index text budget. A 60/40 split that sums to exactly 100 is rejected at deploy time.</description>
    <label>Trace Key</label>
    <type>Text</type>
    <length>35</length>
    <required>true</required>
</CustomField>