force-app/main/default/objects/Fleet_Trace__b/fields/Utterance__c.field-meta.xml
<CustomField>
    <fullName>Utterance__c</fullName>
    <description>Captured end-user utterance. Transcript field, gated by Fleet_View_Transcripts.</description>
    <label>Utterance</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>